--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^4.1.11",
-    "lucide-react": "^0.344.0"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
