--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@types/fluent-ffmpeg": "^2.1.27",
     "dotenv": "^17.2.1",
+    "electron-store": "^10.1.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "lucide-react": "^0.344.0",
