Refactor preload script and update Electron builder configuration
- Minified the preload script for better performance and readability.
- Updated electron-builder configuration to reflect new app details and improved structure.
- Bumped version to 1.0.0 and added description and author in package.json.
- Cleaned up FileUpload component by removing unnecessary functions.
- Simplified Sidebar and SortableGroup components by removing unused props.
- Refactored useElectronStore hook to streamline state management.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "transcripto",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Aplicativo para transcrição de áudio usando AI",
+  "author": "Transcripto Team",
   "type": "module",
   "scripts": {
     "dev": "vite",
